# gauss

./: .gitignore  README.md  pyproject.toml
gauss/: __init__.py  decomposition.py  elimination.py  exceptions.py  rank.py  solvers.py  utils.py
src/: elimination.py
src/gauss/: __init__.py  decomposition.py  elimination.py  rank.py  solvers.py  spaces.py  utils.py
tests/: decomposition_tests.py  elimination_tests.py  rank_tests.py  ref_test.py  solvers_tests.py  test.py
