[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gauss"
version = "0.1.7"
description = "A linear algebra library that provides functions to calculate lengthy, and tireful calculations automatically."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/quandelaa/gauss/"
