[project]
name = "gauss"
version = "0.1.7"
description = "A linear algebra library that provides functions to calculate lengthy, and tireful calculations automatically."
readme = "README.md"
authors = [
    { name = "quandelaa", email = "sergiotobamasilalahi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.uv.workspace]
members = [
    ".",
]
